--- a/Habits/Habits/Base.lproj/Main.storyboard
+++ b/Habits/Habits/Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </collectionViewCellContentView>
                                 <connections>
-                                    <segue destination="1PQ-Qb-EEz" kind="show" id="v9y-dV-leX"/>
+                                    <segue destination="1PQ-Qb-EEz" kind="show" destinationCreationSelector="showUserDetail:sender:" id="v9y-dV-leX"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -209,7 +209,7 @@
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="414" height="50"/>
                                 <connections>
-                                    <segue destination="wh9-Th-KfK" kind="show" id="zen-P0-rB2"/>
+                                    <segue destination="wh9-Th-KfK" kind="show" destinationCreationSelector="showHabitDetail:sender:" id="zen-P0-rB2"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -313,14 +313,82 @@
                     <view key="view" contentMode="scaleToFill" id="Dhk-5d-Kps">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="yFp-5C-FcM">
+                                <rect key="frame" x="16" y="108" width="382" height="158.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rdI-lZ-3x4">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="124"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="sdB-FB-Rj6">
+                                                <rect key="frame" x="0.0" y="1.5" width="124" height="121"/>
+                                                <color key="tintColor" systemColor="systemGray6Color"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="sdB-FB-Rj6" secondAttribute="height" multiplier="1:1" id="Krh-le-JJx"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9XB-H0-ZSq">
+                                                <rect key="frame" x="144" y="43.5" width="238" height="37"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiG-rZ-Hf5">
+                                        <rect key="frame" x="0.0" y="144" width="382" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9cG-zm-all">
+                                <rect key="frame" x="0.0" y="286.5" width="414" height="526.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ecx-8A-dbq">
+                                    <size key="itemSize" width="414" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HabitCount" id="sFE-U3-jb0" customClass="UICollectionViewListCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hpx-uT-giq">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="414" height="44"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="DEv-iX-cma"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sdB-FB-Rj6" firstAttribute="width" secondItem="Dhk-5d-Kps" secondAttribute="width" multiplier="0.3" id="400-RH-DP8"/>
+                            <constraint firstItem="DEv-iX-cma" firstAttribute="trailing" secondItem="9cG-zm-all" secondAttribute="trailing" id="47B-t8-E5k"/>
+                            <constraint firstItem="9cG-zm-all" firstAttribute="top" secondItem="yFp-5C-FcM" secondAttribute="bottom" constant="20" id="AUz-o6-7dU"/>
+                            <constraint firstItem="DEv-iX-cma" firstAttribute="bottom" secondItem="9cG-zm-all" secondAttribute="bottom" id="FXy-4P-gcq"/>
+                            <constraint firstItem="yFp-5C-FcM" firstAttribute="top" secondItem="DEv-iX-cma" secondAttribute="top" constant="20" id="P23-yp-Lp4"/>
+                            <constraint firstItem="yFp-5C-FcM" firstAttribute="leading" secondItem="DEv-iX-cma" secondAttribute="leading" constant="16" id="g31-Zs-J2T"/>
+                            <constraint firstItem="DEv-iX-cma" firstAttribute="trailing" secondItem="yFp-5C-FcM" secondAttribute="trailing" constant="16" id="gMi-tu-5HU"/>
+                            <constraint firstItem="9cG-zm-all" firstAttribute="leading" secondItem="DEv-iX-cma" secondAttribute="leading" id="oeL-Tn-d1x"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="X4t-6Q-n87"/>
+                    <connections>
+                        <outlet property="bioLabel" destination="DiG-rZ-Hf5" id="TjJ-6d-ctB"/>
+                        <outlet property="collectionView" destination="9cG-zm-all" id="Gfr-hU-nGp"/>
+                        <outlet property="profileImageView" destination="sdB-FB-Rj6" id="4Yn-D9-4L3"/>
+                        <outlet property="userNameLabel" destination="9XB-H0-ZSq" id="OhA-fx-AER"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6ki-fl-d6o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="606" y="1118"/>
+            <point key="canvasLocation" x="605.79710144927537" y="1116.2946428571429"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="B0q-Dw-s35">
@@ -348,9 +416,13 @@
         <image name="checkmark.square.fill" catalog="system" width="128" height="114"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
